<package format="3">
  <name>hsrb_moveit_config</name>
  <version>2.0.0</version>
  <description>
     A package with all the configuration and launch files for using the HSRB with the MoveIt Motion Planning Framework
  </description>
  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <author>Kazuto Murase</author>
  <author>Keisuke Takeshita</author>
  <author>Koji Terada</author>
  <author>Minori Higuchi</author>
  <author>Tamaki Nishino</author>
  <author>Yuto Mori</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros</depend>
  <depend>rclcpp</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
